/*
 * Click nbfs://nbhost/SystemFileSystem/Templates/Licenses/license-default.txt to change this license
 * Click nbfs://nbhost/SystemFileSystem/Templates/Classes/Enum.java to edit this template
 */
package Enum;

/**
 *
 * @author FacundoCordoba
 */
public enum SubGenero {
    CANCION, SATIRA , CUENTO, NOVELA,ROMANCE,COMEDIA,DRAMA ,TRAGEDIA;
}
