
@startuml
GestorLibro--> Libro 

Libro --> Genero
Libro --> SubGenero
class GestorLibro{
-{static} libros: ArrayList<Libros>;
- gestorLibro : GestorLibro;
- GestorLibro()
+{static}crearte():GestorLibro
+addBook(String,String,int)
+showBooks()

}

class Libro {
   -isbn:String;
   -titulo:String;
   -autor:String;
   -paginas:int;
   -tipoGenero:Genero;
   - {static} ordenamiento: int;
   +Libro(String,String,String,int,Genero)
   +Libro(String,String,int,Genero)
   + getAutor(String)
   +getIsbn():String
   +getTitulo():String
   +setIsbn(String)
   +setTitulo(String)
   +setAutor(String)
   +setPaginas(int)
   +{static}generateIsbn(int):String
   +{static}generateIsbnV2(int): String
   +{static}generateIsbnV3(int): String
   +{static}generateIsbnV4():String
   +{static}generateIsbnV5():String
   -{static}getInt(int, int):int
   - isIsbmValido(String): boolean;
   + setOrdenamiento(int)
   +compareTo(Libro):int
   + show()
}

enum Genero {
      DRAMATICO
      EPICO
      LIRICO 
      DIDACTICO

}

enum SubGenero {
    CANCION
    SATIRA
    CUENTO
    NOVELA
    ROMANCE
    COMEDIA
    DRAMA
    TRAGEDIA
}
@enduml
